<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/newlineaspause_checkbox_key"
        android:title="@string/preference_newlineaspause"
        android:summary="@string/preference_newlineaspause_desc"
        android:persistent="true"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/preference_category_about">

        <Preference
            android:title="@string/app_name"
            android:icon="@drawable/ic_action_logo"
            android:summary="@string/copyright">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_repo_url"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
