<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_play"
          android:title="@string/action_play"
          android:icon="@drawable/ic_action_play"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_stop"
          android:title="@string/action_stop"
          android:icon="@drawable/ic_action_stop"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_clear"
          android:title="@string/action_clear"
          android:icon="@drawable/ic_action_clear"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_loop"
          android:title="@string/loop"
          android:icon="@drawable/ic_action_loop"
          android:checkable="true"
          android:checked="false"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never"/>
</menu>
